[package]
name = "awair-prometheus-exporter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
serde_derive = "1"
reqwest = { version = "0.11", features = ["json"] }
structopt = "0.3"
prometheus = "0.12"
lazy_static = "1"
hyper = "0.14"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
once_cell = "1"
env_logger = "0.9"
log = "0.4"
